--- a/t/permalinks/expected.html
+++ b/t/permalinks/expected.html
@@ -3,7 +3,7 @@ Content-Type: text/html; charset=ISO-8859-1
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html;charset=ISO-8859-1" />
-        <link rel="alternate" type="type="application/rss+xml" title="RSS" href="http://localhost/index.rss" />
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://localhost/index.rss" />
         <title>My Weblog   
         </title>
     </head>
